# Registration-Mocks

./: README.md  pyproject.toml
Registration-Mocks/: main.py  ui_MainWindow.py
Registration-Mocks/ui/: MainWindow.ui
