[tool.poetry]
name = "registration-mocks"
version = "0.1.0"
description = "Mock Software for Mathtrix Registration Team"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "registration_mocks"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
